# BeamtimeApp

./: .env-example  .gitignore  .pre-commit-config.yaml  .python-version  BeamtimeApp.py  LICENSE  README.md  pyproject.toml  start_beamtime_app.sh  start_beamtime_app_devel.sh
beamtime_app/: __init__.py  config.py  crud.py  database.py  gunicorn_config.py  models.py  routes.py  utils.py
beamtime_app/api/: __init__.py
beamtime_app/api/v1/: __init__.py  routes.py
beamtime_app/static/css/: style.css
beamtime_app/static/js/: utils.js
beamtime_app/templates/: index.html  layout.html
