#!/usr/bin/env python3
# ----------------------------------------------------------------------------------
# Project: BeamtimeApp
# File: pyproject.toml
# ----------------------------------------------------------------------------------
# Purpose:
# This file is used to specify the project configuration and dependencies.
# ----------------------------------------------------------------------------------
# Author: Christofanis Skordas
#
# Copyright (C) 2025 GSECARS, The University of Chicago, USA
# Copyright (C) 2025 NSF SEES, USA
# ----------------------------------------------------------------------------------

[project]
name = "BeamtimeApp"
version = "0.1.1"
authors = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"}
]
maintainers = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"}
]
description = "BeamtimeApp is a Flask application used to generate the required folders, DOI and collection data links (Globus/Nextcloud)."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.13.*"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
]

[project.urls]
Homepage = "https://github.com/seescience/BeamtimeApp"
Issues = "https://github.com/seescience/BeamtimeApp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]